--- a/0x06-unittests_in_js/package.json
+++ b/0x06-unittests_in_js/package.json
@@ -1,17 +1,20 @@
 {
-  "name": "0x06-unittests_in_js",
+  "name": "8-api",
   "version": "1.0.0",
   "description": "``UnitTests`` ``Back-end`` ``JavaScript`` ``ES6`` ``NodeJS`` ``ExpressJS`` ``Mocha``",
-  "main": "0-calcul.js",
+  "main": "index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "./node_modules/mocha/bin/mocha"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "express": "^4.17.1"
+  },
   "devDependencies": {
     "chai": "^4.2.0",
-    "mocha": "^10.7.3",
-    "sinon": "^19.0.2"
+    "mocha": "^6.2.2",
+    "request": "^2.88.0",
+    "sinon": "^7.5.0"
   }
 }
